# libbsc-gui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: bsc_runner.cpp  bsc_runner.h  gui.cpp  gui.h  main.cpp
workflows/: windows-build.yml
